openshift/14-ml-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: masar-embedder
  labels:
    app: masar
    component: embedder
spec:
  selector:
    app: masar
    component: embedder
  ports:
    - name: http
      port: 8001
      targetPort: 8001
      protocol: TCP
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: masar-reranker
  labels:
    app: masar
    component: reranker
spec:
  selector:
    app: masar
    component: reranker
  ports:
    - name: http
      port: 8002
      targetPort: 8002
      protocol: TCP
  type: ClusterIP
